--- a/package.json
+++ b/package.json
@@ -2,7 +2,20 @@
   "name": "@nx-angular-node/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "nx": "nx",
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "serve:frontend": "nx serve frontend",
+    "serve:backend": "nx serve backend",
+    "build:frontend": "nx build frontend",
+    "build:backend": "nx build backend",
+    "test:frontend": "nx test frontend",
+    "test:backend": "nx test backend",
+    "lint": "nx lint",
+    "e2e": "nx e2e"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "~20.1.0",
@@ -13,6 +26,7 @@
     "@angular/platform-server": "~20.1.0",
     "@angular/router": "~20.1.0",
     "@angular/ssr": "~20.1.0",
+    "axios": "^1.6.0",
     "express": "^4.21.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
@@ -30,9 +44,13 @@
     "@eslint/js": "^9.8.0",
     "@nx/angular": "21.3.11",
     "@nx/devkit": "21.3.11",
+    "@nx/esbuild": "21.3.11",
     "@nx/eslint": "21.3.11",
     "@nx/eslint-plugin": "21.3.11",
+    "@nx/express": "^21.3.11",
+    "@nx/jest": "21.3.11",
     "@nx/js": "21.3.11",
+    "@nx/node": "^21.3.11",
     "@nx/playwright": "21.3.11",
     "@nx/vite": "21.3.11",
     "@nx/web": "21.3.11",
@@ -43,19 +61,26 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.29.0",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
     "angular-eslint": "^20.0.0",
     "browser-sync": "^3.0.0",
+    "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-playwright": "^1.6.2",
+    "jest": "^30.0.2",
+    "jest-environment-node": "^30.0.2",
+    "jest-util": "^30.0.2",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "21.3.11",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.4.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.29.0",
