--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "test:frontend": "nx test frontend",
     "test:backend": "nx test backend",
     "lint": "nx lint",
-    "e2e": "nx e2e"
+    "e2e": "nx e2e",
+    "commit": "cz",
+    "commit:retry": "cz --retry",
+    "lint:commit": "commitlint --from HEAD~1 --to HEAD --verbose",
+    "lint:branch": "branch-name-lint",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
@@ -38,11 +43,13 @@
     "@angular-devkit/core": "~20.1.0",
     "@angular-devkit/schematics": "~20.1.0",
     "@angular/build": "~20.1.0",
-    "@angular/cli": "~20.1.0",
+    "@angular/cli": "^18.0.7",
     "@angular/compiler-cli": "~20.1.0",
     "@angular/language-service": "~20.1.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "21.3.11",
+    "@nx/angular": "^21.3.11",
     "@nx/devkit": "21.3.11",
     "@nx/esbuild": "21.3.11",
     "@nx/eslint": "21.3.11",
@@ -61,24 +68,32 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/express": "^4.17.21",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.29.0",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
     "angular-eslint": "^20.0.0",
+    "branch-name-lint": "^3.0.1",
+    "branchlint": "^0.0.2",
     "browser-sync": "^3.0.0",
-    "esbuild": "^0.19.2",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "esbuild": "^0.25.8",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-playwright": "^1.6.2",
-    "jest": "^30.0.2",
+    "external-editor": "^3.1.0",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
+    "lint-staged": "^16.1.4",
     "nx": "21.3.11",
     "prettier": "^2.6.2",
+    "tmp": "^0.2.4",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
@@ -86,5 +101,24 @@
     "typescript-eslint": "^8.29.0",
     "vite": "^6.0.0",
     "vitest": "^3.0.0"
+  },
+  "overrides": {
+    "koa": "^2.16.2",
+    "tmp": "^0.2.4",
+    "external-editor": "^3.1.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,js,html}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   }
 }
